crates/solidity-v2/testing/snapshots/cst_output/ConstructorDefinition/virtual_attribute/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected VirtualKeyword_Reserved. One of AtKeyword_Unreserved, ErrorKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, InternalKeyword_Reserved, LayoutKeyword_Unreserved, OpenBrace, PayableKeyword_Reserved, PublicKeyword_Reserved, RevertKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/ConstructorDefinition/virtual_attribute/input.sol:3:16]
   │
 3 │ constructor () virtual {}
   │                ───┬───  
   │                   ╰───── Error occurred here.
───╯
